tests/fails/arith3.t
import "compiler/liszt"
mesh = L.initMeshRelationsFromFile("examples/mesh.lmesh")

local vk = liszt_kernel(v in mesh.vertices)
    var x = 5 < true
end
vk()
